--- a/src/Pages/Home/Banner/Banner.css
+++ b/src/Pages/Home/Banner/Banner.css
@@ -1,11 +1,8 @@
-.carousel-img:after {
-    content: '';
-    position: absolute;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    display: inline-block;
-    background: linear-gradient( #06061e00 0%, rgba(14, 10, 88, 0.406) 100%);
-    /* W3C */
+.bgBanner {
+    background-image: url(../../../Image/img.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center center;
+    height: 100vh;
+   
 }
